--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
         <div class="boxs">
           <div class="box">
             <div class="icon">
-              <img src="./images/coding.png" alt="img" loading="lazy" />
+              <img src="./images/coding.pngsd" alt="img" loading="lazy" />
             </div>
             <div class="text">
               <h4>تصميم UI / UX</h4>
