--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
         <div class="boxs">
           <div class="owl-carousel owl-theme">
             <a href="project-details.html" class="box">
-              <img src="./images/project-1.jpg" alt="project" loading="lazy" />
+              <img src="images/project-1.jpg" alt="project" loading="lazy" />
               <div class="text">
                 <div class="subtitle">تطبيق Tech</div>
                 <h4>العلامة التجارية الرقمية</h4>
@@ -474,7 +474,7 @@
         <div class="boxs">
           <div class="box">
             <div class="icon">
-              <img src="images/coding.pngsd" alt="img" loading="lazy" />
+              <img src="./images/coding.png" alt="img" loading="lazy" />
             </div>
             <div class="text">
               <h4>تصميم UI / UX</h4>
