--- a/index.html
+++ b/index.html
@@ -409,11 +409,7 @@
         <div class="boxs">
           <div class="owl-carousel owl-theme">
             <a href="project-details.html" class="box">
-              <img
-                src="images/project-1.jpgdlkf"
-                alt="project"
-                loading="lazy"
-              />
+              <img src="./images/project-1.jpg" alt="project" loading="lazy" />
               <div class="text">
                 <div class="subtitle">تطبيق Tech</div>
                 <h4>العلامة التجارية الرقمية</h4>
